--- a/portofolio-website/src/app/components/Header/Header.module.scss
+++ b/portofolio-website/src/app/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 	margin-top: 30px;
 	flex-direction: row;
 	align-items: center;
-
+	margin-bottom: 100px;
 	justify-content: space-between;
 	button {
 	}
