--- a/portofolio-website/src/app/components/AboutMeScreen/AboutMeScreen.module.scss
+++ b/portofolio-website/src/app/components/AboutMeScreen/AboutMeScreen.module.scss
@@ -1,5 +1,25 @@
 .aboutMeWrapper {
-  display: flex;
-  max-width: 1300px;
-  margin: 0 auto;
+  top: 125%;
+  position: absolute;
+  left: 50%;
+  div > {
+    display: flex;
+    flex-direction: row;
+  }
+ 
+h2 {
+    color: var(--color-blue);
+    font-size: 20px;
+    font-weight: 600;
+    font-family: Work Sans 'sans-serif';
+    text-transform: uppercase;
+    
+}
+h1 {
+font-size:50px;
+font-family:Work sans 'sans-serif';
+font-weight: 700;
+color: #222;
+  } 
+ 
 }
