--- a/portofolio-website/src/app/components/AboutMeScreen/AboutMeScreen.module.scss
+++ b/portofolio-website/src/app/components/AboutMeScreen/AboutMeScreen.module.scss
@@ -1,9 +1,12 @@
 .aboutMeWrapper {
   top: 125%;
   position: absolute;
-  left: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   div > {
     display: flex;
+    justify-content: center;
     flex-direction: row;
   }
  
@@ -19,7 +22,9 @@ h1 {
 font-size:50px;
 font-family:Work sans 'sans-serif';
 font-weight: 700;
-color: #222;
+color: #222; span {
+  color: var(--color-blue)
+}
   } 
  
 }
