--- a/portofolio-website/src/app/components/AboutMeScreen/AboutMeScreen.module.scss
+++ b/portofolio-website/src/app/components/AboutMeScreen/AboutMeScreen.module.scss
@@ -1,30 +1,104 @@
+.wrapperRoot {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 330px;
+	.aboutMeTitle {
+		color: var(--color-blue);
+		font-size: 20px;
+		font-weight: 600;
+		font-family: Work Sans 'sans-serif';
+		text-transform: uppercase;
+	}
+}
 .aboutMeWrapper {
-  top: 125%;
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  div > {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-  }
- 
-h2 {
-    color: var(--color-blue);
-    font-size: 20px;
-    font-weight: 600;
-    font-family: Work Sans 'sans-serif';
-    text-transform: uppercase;
-    
+	margin-bottom: 20px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	@media (max-width: 1000px) {
+		flex-direction: column;
+		text-align: center;
+		align-items: center;
+	}
+	h1 {
+		font-size: 50px;
+		font-family: Work sans 'sans-serif';
+		font-weight: 700;
+		color: #222;
+		span {
+			color: var(--color-blue);
+		}
+	}
 }
-h1 {
-font-size:50px;
-font-family:Work sans 'sans-serif';
-font-weight: 700;
-color: #222; span {
-  color: var(--color-blue)
+.textWrapper {
+	max-width: 624px;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
 }
-  } 
- 
+
+.AboutMeBtns {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	button {
+		margin-top: 20px;
+		display: flex;
+		max-width: 170px;
+		height: 50px;
+		padding: 17px 33px;
+		justify-content: center;
+		align-items: center;
+		border-radius: 50px;
+		border: 1px solid #07f;
+		background: #fff;
+		color: #07f;
+		transition: all 0.5s ease-in-out;
+		&:hover {
+			background: #07f;
+			color: #fff;
+		}
+		&:last-of-type {
+			margin-left: 25px;
+		}
+		&:first-of-type {
+			margin-right: 25px;
+		}
+		@media (max-width: 528px) {
+			&:last-of-type {
+				margin-left: 0px;
+			}
+		}
+	}
+}
+
+.loader_skills {
+	margin-top: 10px;
+	max-width: 619.85px;
+	height: 19.386px;
+	flex-shrink: 2;
+	border-radius: 10px;
+	background: #eee;
+}
+.rootSkills {
+	margin-top: 20px;
+}
+.paragraphAwards {
+	margin: 5px;
+}
+
+.myPhoto {
+	max-width: 553px;
+	max-height: 560px;
+}
+@media (max-width: 767px) {
+	.myPhoto {
+		max-width: 335px;
+		max-height: 354.43px;
+		margin-bottom: 20px;
+		margin-top: 20px;
+	}
 }
